--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -286,7 +286,9 @@
     "import time\n",
     "if __name__ == \"__main__\":\n",
     "    simulation = CitySimulation()\n",
-    "    simulation.command_loop()"
+    "    simulation.command_loop()\n",
+    "    \n",
+    "    # Hola"
    ]
   }
  ],
