Revert "The message has been added"
This reverts commit d662e42245fca35687127f9485ec9306f219a7fb.

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -286,11 +286,7 @@
     "import time\n",
     "if __name__ == \"__main__\":\n",
     "    simulation = CitySimulation()\n",
-    "    simulation.command_loop()\n",
-    "\n",
-    "print(\"Hosdfosdfsdfsdfsdfdif\")"
-    "   \n",
-    "    # Hola"
+    "    simulation.command_loop()"
    ]
   }
  ],
