--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -190,10 +190,11 @@
     "        \"client enroll_in_school <client_name> <school_name>\": \"Enroll a client in an specific school.\",\n",
     "        \"client leave_school <client_name>\": \"Allow a client to leave school.\",\n",
     "        \"client join_enrollment_queue <client_name> <school_name><course_name>\": \"Join a client in a queue to enroll a course.\",\n",
-    "        \"client assist_course <school_name> <couser_name>\": \"asistir a un curso en un colegio\",\n",
-    "        \"client assist_course <school_name> <couser_name>\": \"asistir a un curso en un colegio\",\n",
-    "        \"client assist_course <school_name> <couser_name>\": \"asistir a un curso en un colegio\",\n",
-    "        \"client take_exam <client_name> <course_name> <exam_name>\": \"Permitir que un cliente presente un examen de un curso en el que está inscrito.\",\n",
+    "        \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school.\",\n",
+    "        \"client assist_course <school_name> <course_name>\": \"Assist a course in a school.\",\n",
+    "        \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school\",\n",
+    "        \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school\",\n",
+    "        \"client take_exam <client_name> <course_name> <exam_name>\": \"Allow a student to take an exam of a enrolled course.\",\n",
     "        \"quit\": \"q: Exit the simulation.\"\n",
     "    }\n",
     "\n",
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -233,14 +234,14 @@
     "        \"school show_students <school_name>\": \"Show the list of all students registered at school.\",\n",
     "        \"school show_enrollment_queue <school_name>\": \"Show the enrollment queue for the course.\",\n",
     "        \"school admit_student_from_queue <school_name><course_name>\": \"Admit the next student from the queue to enroll in to a course.\",\n",
-    "        \"school show_courses <school_name>\": \"Mostrar la lista de cursos disponibles en el colegio.\",\n",
-    "        \"school remove_student <school_name> <client_name>\": \"Retirar a un cliente del colegio.\",\n",
-    "        \"school show_list\": \"muestra la lista de colegios en el sistema\",\n",
-    "        \"school close / open <schol_name>\": \"abrir / cerrar colegio, si no hay alumnos en clase\",\n",
-    "        \"school add_exam_to_course <school_name> <course_name> <exam_name>\": \"Agregar un examen a un curso específico en el colegio.\",\n",
-    "        \"school grade_exam <school_name> <course_name> <client_name> <exam_name>\": \"Calificar un examen que un cliente ha presentado en un curso.\",\n",
-    "        \"school remove_exam_from_course <school_name> <course_name> <exam_name>\": \"Eliminar un examen de un curso si ningún cliente lo ha presentado.\",\n",
-    "        \"school show_exams <school_name> <course_name>\": \"Mostrar la lista de exámenes disponibles para un curso en el colegio.\",\n",
+    "        \"school show_courses <school_name>\": \"Show the available courses at school.\",\n",
+    "        \"school remove_student <school_name> <client_name>\": \"Remove a student from school.\",\n",
+    "        \"school show_list\": \"Show the list of schools in the system\",\n",
+    "        \"school close / open <schol_name>\": \"Open / close school, if there isn't students at class\",\n",
+    "        \"school add_exam_to_course <school_name> <course_name> <exam_name>\": \"Add an exam to a specific course at school.\",\n",
+    "        \"school grade_exam <school_name> <course_name> <client_name> <exam_name>\": \"Grade an exam that the client has taken in a course.\",\n",
+    "        \"school remove_exam_from_course <school_name> <course_name> <exam_name>\": \"Remove an exam from a course if no client has submitted it.\",\n",
+    "        \"school show_exams <school_name> <course_name>\": \"Show the list of exams available for a course at the school.\",\n",
     "        \"quit\": \"q: Exit the simulation.\"\n",
     "    }\n",
     "    \n",
