fix(enroll_commands): The enroll in school commands has been fixed

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -146,11 +146,13 @@
     "        # Guardar schools\n",
     "        for school in self.filter_agents(School).values():\n",
     "            data[\"schools\"][school.name] = {\n",
+    "                \"students\": school.students\n",
     "            }\n",
     "\n",
     "        # Guardar clients\n",
     "        for client in self.filter_agents(Client).values():\n",
     "            data[\"clients\"][client.name] = {\n",
+    "                \"enrolled_school\": client.school_stack.peek()\n",
     "            }\n",
     "\n",
     "        try:\n",
@@ -166,12 +168,12 @@
    "id": "9450e892",
    "metadata": {},
    "source": [
-    "## Clients"
+    "## Client"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -198,16 +200,22 @@
     "    def add_client(self, client_name):\n",
     "        pass\n",
     "    \n",
-    "    def enroll_in_school(self, school_name):\n",
-    "        \"\"\"Permite al cliente entrar en un colegio.\"\"\"\n",
-    "        self.school_stack.push(school_name)\n",
-    "        school.enroll_in_school(self.name)  # Llama al método de la clase School para inscribir al cliente\n",
+    "    def enroll_in_school(self, school):\n",
+    "        if self.school_stack.is_empty():\n",
+    "            self.school_stack.push(school.name)\n",
+    "            school.enroll_in_school(self.name)\n",
+    "        else:\n",
+    "            print(f'{self.name} is already enrolled in {self.school_stack.peek()}.')\n",
     "    \n",
     "    def leave_school(self):\n",
-    "        \"\"\"Permite al cliente salir del colegio.\"\"\"\n",
     "        if not self.school_stack.is_empty():\n",
     "            school_name = self.school_stack.pop()\n",
-    "            school.leave_school(self.name)\n",
+    "            school = self.get_agent_by_name(school_name, School)\n",
+    "            if school:\n",
+    "                school.leave_school(self.name)\n",
+    "                print(f'{self.name} exited {school_name}.')\n",
+    "            else:\n",
+    "                print(f'{self.name} is not in any school.')\n",
     "    \n",
     "    def join_enrollment_queue(self, school_name, course_name):\n",
     "        pass\n",
@@ -239,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -276,13 +284,13 @@
     "        else:\n",
     "            print(f\"Course '{course_name}' already exists in school '{self.name}'.\")\n",
     "    \n",
-    "    def show_students(self, school_name=None):\n",
+    "    def show_students(self):\n",
     "        if not self.students:\n",
     "            print(f\"No students enrolled in school '{self.name}'.\")\n",
     "        else:\n",
     "            print(f\"Students enrolled in school '{self.name}':\")\n",
     "            for student in self.students:\n",
-    "                print(f\"- {student.name}\")\n",
+    "                print(f\"- {student}\")\n",
     "    \n",
     "    def show_enrollment_queue(self, school_name):\n",
     "        pass\n",
@@ -316,12 +324,12 @@
     "    \n",
     "    # Other methods-----------------------------------------------------------\n",
     "    \n",
-    "    def enroll_in_school(self, client_name, school_name):\n",
+    "    def enroll_in_school(self, client_name):\n",
     "        if client_name not in self.students:\n",
     "            self.students.append(client_name)\n",
-    "            print(f\"Client '{client_name}' has been enrolled in school '{school_name}'.\")\n",
+    "            print(f\"Client '{client_name}' has been enrolled in school '{self.name}'.\")\n",
     "        else:\n",
-    "            print(f\"Client '{client_name}' is already enrolled in school '{school_name}'.\")\n",
+    "            print(f\"Client '{client_name}' is already enrolled in school '{self.name}'.\")\n",
     "            \n",
     "    def leave_school(self, client_name):\n",
     "        if client_name in self.students:\n",
@@ -348,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -422,7 +430,7 @@
     "                else:\n",
     "                    self.help()\n",
     "            else:\n",
-    "                self.help()            # Llama al método de ayuda\n",
+    "                self.help()\n",
     "            return\n",
     "        \n",
     "        elif cmd == 'load_agents':\n",
@@ -457,17 +465,19 @@
     "                self.help_school()\n",
     "                \n",
     "        elif cmd == 'client':\n",
-    "            if   parts[1] == 'add_client':                  #client add_client <client_name>\n",
+    "            if   parts[1] == 'add_client':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"client add_client <client_name>\"):\n",
     "                    _, _, client_name = parts\n",
     "                    self.agent_manager.add_agent(Client, client_name)\n",
     "                    print(f\"Client '{client_name}' added to the system.\")\n",
     "                    \n",
-    "            elif parts[1] == 'enroll_in_school':           #client enroll_in_school <client_name> <school_name>\n",
+    "            elif parts[1] == 'enroll_in_school':\n",
     "                if self.validate_command(parts, 4, \"invalid_format\", \"client enroll_in_school <client_name> <school_name>\"):\n",
     "                    _, _, client_name, school_name = parts\n",
     "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if client and school:\n",
+    "                        client.enroll_in_school(school)\n",
     "            \n",
     "            elif parts[1] == 'leave_school':\n",
     "                if self.validate_command(parts, 3, \"invalid_format\", \"client leave_school <client_name>\"):\n",
@@ -498,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -531,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -574,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -593,10 +603,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting city simulation... Type 'q' to exit\n",
+      "School Marques_De_Comares added to the system.\n",
+      "School La_Palmera added to the system.\n",
+      "School Carlos_Cano added to the system.\n",
+      "Client Billy added to the system.\n",
+      "Client Alice added to the system.\n",
+      "Client Paco added to the system.\n",
+      "--- Agents loaded successfully from agents.json. --- \n",
+      "Client 'Paco' has been enrolled in school 'Carlos_Cano'.\n",
+      "--- Agents saved successfully to agents.json. --- \n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
@@ -607,7 +634,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "SIC_Capstone_School",
    "language": "python",
    "name": "python3"
   },
@@ -621,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
