--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 77,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 78,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -121,12 +121,15 @@
     "            for school_name, school_data in data.get(\"schools\", {}).items():\n",
     "                self.add_agent(School, school_name)\n",
     "                school = self.get_agent_by_name(school_name, School)\n",
-    "\n",
-    "            # Cargar clients\n",
+    "                school.students = school_data.get(\"students\", [])\n",
+    "                \n",
     "            for client_name, client_data in data.get(\"clients\", {}).items():\n",
     "                self.add_agent(Client, client_name)\n",
     "                client = self.get_agent_by_name(client_name, Client)\n",
-    "\n",
+    "                enrolled_school = client_data.get(\"enrolled_school\")\n",
+    "                if enrolled_school:\n",
+    "                    client.school_stack.push(enrolled_school)  \n",
+    "                        \n",
     "            print(f\"--- Agents loaded successfully from {file_path}. --- \")\n",
     "        except FileNotFoundError:\n",
     "            print(f\"Error: File '{file_path}' not found.\")\n",
@@ -134,6 +137,7 @@
     "            print(f\"Error: File '{file_path}' is not a valid JSON file.\")\n",
     "        except Exception as e:\n",
     "            print(f\"An error occurred while loading agents: {e}\")     \n",
+    "    \n",
     "    \n",
     "    def save_agents_to_file(self, file_path):\n",
     "        \"\"\"Guarda los agentes en un fichero JSON.\"\"\"\n",
@@ -173,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 79,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -182,7 +186,8 @@
     "    \"\"\"Clase que representa a un cliente que interactúa con el colegio.\"\"\"\n",
     "    def __init__(self, name):\n",
     "        super().__init__(name)\n",
-    "        self.school_stack = Stack()  # En que colegio se encuentra\n",
+    "        self.school_stack = Stack()\n",
+    "        self.agent_manager = AgentManager() \n",
     "    \n",
     "    HELP_MESSAGES = {\n",
     "        \"client add_client <client_name>\": \"Add a client (student) to the system.\",\n",
@@ -208,14 +213,19 @@
     "            print(f'{self.name} is already enrolled in {self.school_stack.peek()}.')\n",
     "    \n",
     "    def leave_school(self):\n",
-    "        if not self.school_stack.is_empty():\n",
-    "            school_name = self.school_stack.pop()\n",
-    "            school = self.get_agent_by_name(school_name, School)\n",
-    "            if school:\n",
-    "                school.leave_school(self.name)\n",
-    "                print(f'{self.name} exited {school_name}.')\n",
+    "            if not self.school_stack.is_empty():\n",
+    "                school_name = self.school_stack.pop()\n",
+    "                if school_name: \n",
+    "                    school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "                    if school:\n",
+    "                        school.remove_student(self.name)  \n",
+    "                        print(f'{self.name} exited {school_name}.')\n",
+    "                    else:\n",
+    "                        print(f\"Error: School '{school_name}' not found.\")\n",
+    "                else:\n",
+    "                    print(f\"{self.name}'s school name was empty or invalid.\")\n",
     "            else:\n",
-    "                print(f'{self.name} is not in any school.')\n",
+    "                print(f'{self.name} is not currently enrolled in any school.')\n",
     "    \n",
     "    def join_enrollment_queue(self, school_name, course_name):\n",
     "        pass\n",
@@ -247,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 80,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -285,7 +295,7 @@
     "            print(f\"Course '{course_name}' already exists in school '{self.name}'.\")\n",
     "    \n",
     "    def show_students(self):\n",
-    "        if not self.students:\n",
+    "        if len(self.students) == 0:\n",
     "            print(f\"No students enrolled in school '{self.name}'.\")\n",
     "        else:\n",
     "            print(f\"Students enrolled in school '{self.name}':\")\n",
@@ -356,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 81,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -508,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 82,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -541,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 83,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -584,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 84,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -603,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 85,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -619,8 +629,7 @@
       "Client Alice added to the system.\n",
       "Client Paco added to the system.\n",
       "--- Agents loaded successfully from agents.json. --- \n",
-      "Client 'Paco' has been enrolled in school 'Carlos_Cano'.\n",
-      "--- Agents saved successfully to agents.json. --- \n"
+      "Alice is not currently enrolled in any school.\n"
      ]
     }
    ],
