fix(School): The create course command has been fixed and implemented

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 19,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,8 @@
     "        # Guardar schools\n",
     "        for school in self.filter_agents(School).values():\n",
     "            data[\"schools\"][school.name] = {\n",
-    "                \"students\": school.students\n",
+    "                \"students\": school.students,\n",
+    "                \"courses\": school.courses\n",
     "            }\n",
     "\n",
     "        # Guardar clients\n",
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 21,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -201,9 +202,6 @@
     "    }\n",
     "    \n",
     "    # Client methods-------------------------------------------------------------------------------------------------------------------------\n",
-    "    \n",
-    "    def add_client(self, client_name):\n",
-    "        pass\n",
     "    \n",
     "    def enroll_in_school(self, school):\n",
     "        if self.school_stack.is_empty():\n",
@@ -233,9 +231,6 @@
     "    def assist_course(self, course_name):\n",
     "        pass\n",
     "    \n",
-    "    def show_list(self):\n",
-    "        pass\n",
-    "    \n",
     "    def take_exam(self, course_name, exam_name):\n",
     "        pass\n",
     "\n",
@@ -257,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 22,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -266,11 +261,12 @@
     "    def __init__(self, name):\n",
     "        super().__init__(name)\n",
     "        self.students = []                               # Lista de estudiantes en la escuela  \n",
+    "        self.courses = []                               # Lista de estudiantes en la escuela  \n",
     "\n",
     "\n",
     "    HELP_MESSAGES = {\n",
     "        \"school add_school <school_name>\": \"Add a new school to the system.\",\n",
-    "        \"school create_course <course_name>\": \"Create a new course at school.\",\n",
+    "        \"school create_course <course_name> <school_name>\": \"Create a new course at school.\",\n",
     "        \"school show_students <school_name>\": \"Show the list of all students registered at school.\",\n",
     "        # \"school show_enrollment_queue <school_name>\": \"Show the enrollment queue for the course.\",\n",
     "        # \"school admit_student_from_queue <school_name><course_name>\": \"Admit the next student from the queue to enroll in to a course.\",\n",
@@ -366,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 23,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -460,6 +456,13 @@
     "                    self.agent_manager.add_agent(School, school_name)\n",
     "                    print(f\"School '{school_name}' added to the system.\")\n",
     "                    \n",
+    "            if   parts[1] == 'create_course':\n",
+    "                if self.validate_command(parts, 4, \"invalid_format\", \"school create_course <course_name> <school_name>\"):\n",
+    "                    _, _, course_name, school_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.create_course(course_name)     \n",
+    "                    \n",
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"school show_list\"):\n",
     "                    self.agent_manager.list_agents(School)\n",
@@ -518,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 24,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -551,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 25,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -594,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 26,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -613,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 27,
    "id": "788ad798",
    "metadata": {},
    "outputs": [
@@ -629,7 +632,8 @@
       "Client Alice added to the system.\n",
       "Client Paco added to the system.\n",
       "--- Agents loaded successfully from agents.json. --- \n",
-      "Alice is not currently enrolled in any school.\n"
+      "Course 'Lengua' has been created in school 'Carlos_Cano'.\n",
+      "--- Agents saved successfully to agents.json. --- \n"
      ]
     }
    ],
