--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "2f1da4b4",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "6b0b5b7d",
    "metadata": {},
    "outputs": [],
@@ -122,6 +122,7 @@
     "                self.add_agent(School, school_name)\n",
     "                school = self.get_agent_by_name(school_name, School)\n",
     "                school.students = school_data.get(\"students\", [])\n",
+    "                school.courses = school_data.get(\"courses\", [])\n",
     "                \n",
     "            for client_name, client_data in data.get(\"clients\", {}).items():\n",
     "                self.add_agent(Client, client_name)\n",
@@ -178,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "5b48652d",
    "metadata": {},
    "outputs": [],
@@ -252,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "5f99c9dd",
    "metadata": {},
    "outputs": [],
@@ -270,7 +271,7 @@
     "        \"school show_students <school_name>\": \"Show the list of all students registered at school.\",\n",
     "        # \"school show_enrollment_queue <school_name>\": \"Show the enrollment queue for the course.\",\n",
     "        # \"school admit_student_from_queue <school_name><course_name>\": \"Admit the next student from the queue to enroll in to a course.\",\n",
-    "        # \"school show_courses <school_name>\": \"Show the available courses at school.\",\n",
+    "        \"school show_courses <school_name>\": \"Show the available courses at school.\",\n",
     "        # \"school remove_student <school_name> <client_name>\": \"Remove a student from school.\",\n",
     "        \"school show_list\": \"Show the list of schools in the system\",\n",
     "        # \"school close / open <schol_name>\": \"Open / close school, if there isn't students at class\",\n",
@@ -304,8 +305,13 @@
     "    def admit_student_from_queue(self, school_name, course_name):\n",
     "        pass\n",
     "    \n",
-    "    def show_courses(self, school_name):\n",
-    "        pass\n",
+    "    def show_courses(self):\n",
+    "        if len(self.courses) == 0:\n",
+    "            print(f\"There is no courses in school '{self.name}'.\")\n",
+    "        else:\n",
+    "            print(f\"Courses in school '{self.name}':\")\n",
+    "            for course in self.courses:\n",
+    "                print(f\"- {course}\")\n",
     "    \n",
     "    def remove_student(self, school_name, client_name):\n",
     "        pass\n",
@@ -362,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "9bafc431",
    "metadata": {},
    "outputs": [],
@@ -462,6 +468,13 @@
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
     "                        school.create_course(course_name)     \n",
+    "\n",
+    "            if   parts[1] == 'show_courses':\n",
+    "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_courses <school_name>\"):\n",
+    "                    _, _, school_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.show_courses()     \n",
     "                    \n",
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"school show_list\"):\n",
@@ -521,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "17ed5172",
    "metadata": {},
    "outputs": [],
@@ -554,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "bdaf67dc",
    "metadata": {},
    "outputs": [],
@@ -597,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9727f6df",
    "metadata": {},
    "outputs": [],
@@ -616,27 +629,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "788ad798",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting city simulation... Type 'q' to exit\n",
-      "School Marques_De_Comares added to the system.\n",
-      "School La_Palmera added to the system.\n",
-      "School Carlos_Cano added to the system.\n",
-      "Client Billy added to the system.\n",
-      "Client Alice added to the system.\n",
-      "Client Paco added to the system.\n",
-      "--- Agents loaded successfully from agents.json. --- \n",
-      "Course 'Lengua' has been created in school 'Carlos_Cano'.\n",
-      "--- Agents saved successfully to agents.json. --- \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "if __name__ == \"__main__\":\n",
