feat(client): join_enrollment_queue has been implemented

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -11,7 +11,9 @@
   {
    "cell_type": "markdown",
    "id": "cf7b4387",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Agent"
    ]
@@ -37,7 +39,9 @@
   {
    "cell_type": "markdown",
    "id": "453c0284",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Agent Manager"
    ]
@@ -52,14 +56,14 @@
     "class AgentManager:\n",
     "    \"\"\"Clase base para gestionar la creación y eliminación de agentes.\"\"\"\n",
     "    def __init__(self):\n",
-    "        self.agents = {}                    # Diccionario para almacenar agentes\n",
-    "        self.TIME_THRESHOLD = 10            # Umbral de 10 segundos\n",
+    "        self.agents = {}\n",
+    "        self.TIME_THRESHOLD = 10\n",
     "        \n",
     "    def filter_agents(self,*agents_types):\n",
     "        \"\"\"Filtra agentes según los tipos proporcionados.\"\"\"\n",
     "        filtered_agents = {\n",
     "            name: agent for name, agent in agents.items()\n",
-    "            if isinstance(agent, tuple(agents_types))      # Filtrar según tipos\n",
+    "            if isinstance(agent, tuple(agents_types))  \n",
     "        }\n",
     "        return filtered_agents\n",
     "    \n",
@@ -93,22 +97,12 @@
     "        if agent_type:\n",
     "            print(f\"Current {agent_type.__name__}(s):\")\n",
     "            filtered_agents = self.filter_agents(agent_type)\n",
-    "            for agent in filtered_agents.values():               # Imprimir descripciones de los agentes filtrados\n",
+    "            for agent in filtered_agents.values():\n",
     "                print(agent.describe())\n",
     "        else:\n",
     "            print(\"Current agents:\")\n",
     "            for agent in agents.values():\n",
     "                print(agent.describe())     \n",
-    "\n",
-    "    def check_ready_services(self):\n",
-    "        \"\"\"Verifica si hay servicios listos para ser atendidos por cada ayuntamiento.\"\"\"\n",
-    "        filtered_agents = self.filter_agents(School)  # Filtrar solo los ayuntamientos\n",
-    "        for town_hall in filtered_agents.values():\n",
-    "            while not town_hall.request_services.is_empty():  # Procesar todos los servicios en la cola\n",
-    "                if self.is_time_to_serve(town_hall):  # Verificar si es tiempo de atender el servicio\n",
-    "                    town_hall.process_request_service()  # Procesar el servicio\n",
-    "                else:\n",
-    "                    break  # Salir si no es tiempo de procesar el siguiente servicio\n",
     "    \n",
     "    def load_agents_from_file(self, file_path):\n",
     "        \"\"\"Carga agentes desde un fichero JSON.\"\"\"\n",
@@ -172,7 +166,9 @@
   {
    "cell_type": "markdown",
    "id": "9450e892",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Client"
    ]
@@ -195,7 +191,7 @@
     "        \"client add_client <client_name>\": \"Add a client (student) to the system.\",\n",
     "        \"client enroll_in_school <client_name> <school_name>\": \"Enroll a client in an specific school.\",\n",
     "        \"client leave_school <client_name>\": \"Allow a client to leave school.\",\n",
-    "        # \"client join_enrollment_queue <client_name> <school_name><course_name>\": \"Join a client in a queue to enroll a course.\",\n",
+    "        \"client join_enrollment_queue <client_name> <school_name> <course_name>\": \"Join a client in a queue to enroll a course.\",\n",
     "        # \"client assist_course <school_name> <couser_name>\": \"Assist a course in a school.\",\n",
     "        \"client show_list\": \"Show the list of clients in the system.\",\n",
     "        # \"client take_exam <client_name> <course_name> <exam_name>\": \"Allow a student to take an exam of a enrolled course.\",\n",
@@ -227,7 +223,16 @@
     "                print(f'{self.name} is not currently enrolled in any school.')\n",
     "    \n",
     "    def join_enrollment_queue(self, school_name, course_name):\n",
-    "        pass\n",
+    "        school = self.agent_manager.get_agent_by_name(school_name, School)\n",
+    "        if school:\n",
+    "            if self.name in school.students:\n",
+    "                if course_name in school.courses:\n",
+    "                    school.courses_client_queue.enqueue([course_name, self.name])\n",
+    "                    print(f'{self.name} joined the enrollment queue for {course_name} in {school_name}.')\n",
+    "                else:\n",
+    "                    print(f'{course_name} is not available in {school_name}.')\n",
+    "            else:\n",
+    "                print(f'{self.name} is not enrolled in {school_name}.')\n",
     "    \n",
     "    def assist_course(self, course_name):\n",
     "        pass\n",
@@ -246,7 +251,9 @@
   {
    "cell_type": "markdown",
    "id": "d9b090a9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## School"
    ]
@@ -261,8 +268,9 @@
     "class School(Agent):\n",
     "    def __init__(self, name):\n",
     "        super().__init__(name)\n",
-    "        self.students = []                               # Lista de estudiantes en la escuela  \n",
-    "        self.courses = []                               # Lista de estudiantes en la escuela  \n",
+    "        self.students = []  \n",
+    "        self.courses = [] \n",
+    "        self.courses_client_queue = Queue() \n",
     "\n",
     "\n",
     "    HELP_MESSAGES = {\n",
@@ -361,7 +369,9 @@
   {
    "cell_type": "markdown",
    "id": "6b99d400",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## City Simulation"
    ]
@@ -511,6 +521,13 @@
     "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
     "                    if client:\n",
     "                        client.leave_school()\n",
+    "                        \n",
+    "            elif parts[1] == 'join_enrollment_queue':\n",
+    "                if self.validate_command(parts, 5, \"invalid_format\", \"client join_enrollment_queue <client_name> <school_name> <course_name>\"):\n",
+    "                    _, _, client_name, school_name, course_name = parts\n",
+    "                    client = self.get_agent_or_error(client_name, Client, \"client_not_found\")\n",
+    "                    if client:\n",
+    "                        client.join_enrollment_queue(school_name, course_name)\n",
     "            \n",
     "            elif   parts[1] == 'show_list':\n",
     "                if self.validate_command(parts, 2, \"invalid_format\", \"client show_list\"):\n",
@@ -527,7 +544,9 @@
   {
    "cell_type": "markdown",
    "id": "de17c0d2",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Stack"
    ]
@@ -560,7 +579,9 @@
   {
    "cell_type": "markdown",
    "id": "abdddcd9",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Queue"
    ]
@@ -575,7 +596,7 @@
     "class Queue:\n",
     "    \n",
     "    def __init__(self):\n",
-    "        self.queue = []\n",
+    "        self.queue = []        \n",
     "    \n",
     "    def is_empty (self):\n",
     "        return True if len(self.queue) == 0 else False\n",
@@ -603,7 +624,9 @@
   {
    "cell_type": "markdown",
    "id": "71ece403",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## General agent dictionary"
    ]
