feat(school): The commands show_enrollment_queue, remove_student and close/open school have been created.

--- a/SIC_Capstone_School.ipynb
+++ b/SIC_Capstone_School.ipynb
@@ -270,19 +270,20 @@
     "        super().__init__(name)\n",
     "        self.students = []  \n",
     "        self.courses = [] \n",
-    "        self.courses_client_queue = Queue() \n",
+    "        self.courses_client_queue = Queue()\n",
+    "        self.is_open = True \n",
     "\n",
     "\n",
     "    HELP_MESSAGES = {\n",
     "        \"school add_school <school_name>\": \"Add a new school to the system.\",\n",
     "        \"school create_course <course_name> <school_name>\": \"Create a new course at school.\",\n",
     "        \"school show_students <school_name>\": \"Show the list of all students registered at school.\",\n",
-    "        # \"school show_enrollment_queue <school_name>\": \"Show the enrollment queue for the course.\",\n",
+    "        \"school show_enrollment_queue <school_name>\": \"Show the enrollment queue for the course.\",\n",
     "        # \"school admit_student_from_queue <school_name><course_name>\": \"Admit the next student from the queue to enroll in to a course.\",\n",
     "        \"school show_courses <school_name>\": \"Show the available courses at school.\",\n",
-    "        # \"school remove_student <school_name> <client_name>\": \"Remove a student from school.\",\n",
+    "        \"school remove_student <school_name> <client_name>\": \"Remove a student from school.\",\n",
     "        \"school show_list\": \"Show the list of schools in the system\",\n",
-    "        # \"school close / open <schol_name>\": \"Open / close school, if there isn't students at class\",\n",
+    "        \"school close / open <schol_name>\": \"Open / close school, if there isn't students at class\",\n",
     "        # \"school add_exam_to_course <school_name> <course_name> <exam_name>\": \"Add an exam to a specific course at school.\",\n",
     "        # \"school grade_exam <school_name> <course_name> <client_name> <exam_name>\": \"Grade an exam that the client has taken in a course.\",\n",
     "        # \"school remove_exam_from_course <school_name> <course_name> <exam_name>\": \"Remove an exam from a course if no client has submitted it.\",\n",
@@ -307,8 +308,13 @@
     "            for student in self.students:\n",
     "                print(f\"- {student}\")\n",
     "    \n",
-    "    def show_enrollment_queue(self, school_name):\n",
-    "        pass\n",
+    "    def show_enrollment_queue(self):\n",
+    "        if not self.enrollment_queue:\n",
+    "            print(f\"No students in the enrollment queue for school '{self.name}'.\")\n",
+    "        else:\n",
+    "            print(f\"Enrollment queue for school '{self.name}':\")\n",
+    "            for course, student in self.enrollment_queue:\n",
+    "                print(f\"- {student} (Course: {course})\")\n",
     "    \n",
     "    def admit_student_from_queue(self, school_name, course_name):\n",
     "        pass\n",
@@ -321,14 +327,30 @@
     "            for course in self.courses:\n",
     "                print(f\"- {course}\")\n",
     "    \n",
-    "    def remove_student(self, school_name, client_name):\n",
-    "        pass\n",
+    "    def remove_student(self, client_name):\n",
+    "        if client_name in self.students:\n",
+    "            self.students.remove(client_name)\n",
+    "            print(f\"Student '{client_name}' has been removed from school '{self.name}'.\")\n",
+    "        else:\n",
+    "            print(f\"Student '{client_name}' not found in school '{self.name}'.\")\n",
     "    \n",
     "    def close(self, school_name):\n",
-    "        pass\n",
+    "        if not self.is_open:\n",
+    "            print(f\"School '{school_name}' is already closed.\")\n",
+    "        elif len(self.students) == 0:\n",
+    "            self.is_open = False\n",
+    "            print(f\"School '{school_name}' is now closed.\")\n",
+    "        else:\n",
+    "            print(f\"School '{school_name}' cannot be closed while there are students enrolled.\")\n",
     "    \n",
     "    def open(self, school_name):\n",
-    "        pass\n",
+    "        if self.is_open:\n",
+    "            print(f\"School '{school_name}' is already open.\")\n",
+    "        elif len(self.students) == 0:\n",
+    "            self.is_open = True\n",
+    "            print(f\"School '{school_name}' is now open.\")\n",
+    "        else:\n",
+    "            print(f\"School '{school_name}' cannot be opened while there are no students enrolled.\")\n",
     "    \n",
     "    def add_exam_to_course(self, school_name, course_name, exam_name):\n",
     "        pass\n",
@@ -496,6 +518,29 @@
     "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
     "                    if school:\n",
     "                        school.show_students()                       \n",
+    "            \n",
+    "            if parts[1] == 'show_enrollment_queue':\n",
+    "                if self.validate_command(parts, 3, \"invalid_format\", \"school show_enrollment_queue <school_name>\"):\n",
+    "                    _, _, school_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.show_enrollment_queue()\n",
+    "            \n",
+    "            if parts[1] == 'remove_student':\n",
+    "                if self.validate_command(parts, 4, \"invalid_format\", \"school remove_student <school_name> <client_name>\"):\n",
+    "                    _, _, school_name, client_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        school.remove_student(client_name)\n",
+    "            elif parts[1] == 'open' or parts[1] == 'close':\n",
+    "                if self.validate_command(parts, 3, \"invalid_format\", \"school open/close <school_name>\"):\n",
+    "                    _, cmd, school_name = parts\n",
+    "                    school = self.get_agent_or_error(school_name, School, \"school_not_found\")\n",
+    "                    if school:\n",
+    "                        if cmd == 'open':\n",
+    "                            school.open(school_name)\n",
+    "                        elif cmd == 'close':\n",
+    "                            school.close(school_name)\n",
     "            else:\n",
     "                print(self.ERROR_MESSAGES[\"invalid_command\"])\n",
     "                self.help_school()\n",
@@ -666,7 +711,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SIC_Capstone_School",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -680,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
